--- a/index.html
+++ b/index.html
@@ -1,35 +1,53 @@
 <!DOCTYPE html>
-<html>
+<html lang="id">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>User Manual Kamera Omron FHV7</title>
   <style>
-    body { font-family: Arial, sans-serif; margin: 20px; background: #f9f9f9; }
-    h1 { color: #333; }
-    .step { background: white; padding: 15px; border-radius: 10px; margin-bottom: 20px; box-shadow: 0 0 5px rgba(0,0,0,0.1); }
-    img { max-width: 100%; height: auto; border-radius: 5px; }
+    body { font-family: sans-serif; background: #f9f9f9; padding: 20px; line-height: 1.6; }
+    .section { background: white; padding: 15px; margin-bottom: 20px; border-radius: 10px; box-shadow: 0 0 4px rgba(0,0,0,0.1); }
+    h1, h2 { color: #333; }
+    img { max-width: 100%; height: auto; border-radius: 8px; margin-top: 10px; }
+    a { color: blue; }
   </style>
 </head>
 <body>
-  <h1>User Manual Kamera Omron FHV7</h1>
 
-  <div class="step">
-    <h2>🔌 Langkah 1: Menyalakan Kamera</h2>
-    <p>Pastikan kabel power dan ethernet sudah terhubung.</p>
-    <img src="https://i.imgur.com/GAMBAR1.jpg" alt="Menyalakan Kamera">
-  </div>
+<h1>User Manual Kamera Omron FHV7</h1>
 
-  <div class="step">
-    <h2>💻 Langkah 2: Buka FHV Launcher</h2>
-    <p>Jalankan software FHV Launcher dan klik Connect.</p>
-    <img src="https://i.imgur.com/GAMBAR2.jpg" alt="FHV Launcher">
-  </div>
+<div class="section">
+  <h2 id="kecepatan">1. Setting Kecepatan Kamera</h2>
+  <p>Setting di range antara <strong>400-800</strong> (opsional). Jika masih belum bisa, maka bisa diluar range tersebut.</p>
+</div>
 
-  <div class="step">
-    <h2>▶️ Video Tutorial</h2>
-    <p><a href="https://youtu.be/LINKVIDEOMU" target="_blank">Klik di sini untuk menonton</a></p>
-  </div>
+<div class="section">
+  <h2 id="focus">2. Setting Focus Kamera</h2>
+  <p>Setting fokus kamera dapat dilakukan secara otomatis.</p>
+  <p><strong>Catatan:</strong> Jika masih kurang fokus, bisa di-adjust secara manual sampai terlihat fokus.</p>
+</div>
+
+<div class="section">
+  <h2 id="cahaya">3. Setting Kecerahan Cahaya</h2>
+  <p>Klik <em>Screen Adjust</em>, kemudian atur cahaya di bagian <em>Adjustment</em>.</p>
+  <p><strong>Catatan:</strong> Semakin besar angka, semakin terang cahaya. Lampu memiliki 4 sisi.</p>
+</div>
+
+<div class="section">
+  <h2 id="mirror">4. Mirror Hasil Kamera</h2>
+  <p>Gunakan tombol panah atas & bawah untuk membalik arah vertikal, kanan & kiri untuk arah horizontal.</p>
+</div>
+
+<div class="section">
+  <h2 id="shape">5. Shape Search Setting III</h2>
+  <p><strong>Fungsi:</strong> Menstabilkan Batch Number, mendeteksi label (ada/tidak ada).</p>
+  <p><strong>Langkah:</strong> Atur kotak Model sesuai objek, lanjut ke Region (buat kotak lebih besar), lalu Measurement. Klik "Measure".</p>
+</div>
+
+<div class="section">
+  <h2>🎥 Video Tutorial</h2>
+  <p><a href="https://youtu.be/link-video" target="_blank">Tonton Video Penggunaan Kamera FHV7</a></p>
+</div>
 
 </body>
 </html>
