--- a/index.html
+++ b/index.html
@@ -295,7 +295,7 @@
             </li>
             <li><strong>Mirror:</strong> Panah atas/bawah atau kiri/kanan untuk membalik orientasi sesuai kebutuhan label.</li>
           </ul>
-          <a href="https://www.youtube.com/watch?v=xxxxxx" target="_blank" class="video-link" aria-label="Lihat Video Camera Input">
+          <a href="https://youtu.be/ilXzyhJWyQ4?si=Kic86I3w1vzwYU1n" target="_blank" class="video-link" aria-label="Lihat Video Camera Input">
             <svg viewBox="0 0 24 24" fill="none"><path d="M8 5v14l11-7L8 5z" fill="currentColor"/></svg>
             Lihat Video Camera Input
           </a>
@@ -317,7 +317,7 @@
             </li>
             <li>Gunakan hasil untuk mengecek keberadaan batch number/label.</li>
           </ol>
-          <a href="https://www.youtube.com/watch?v=yyyyyy" target="_blank" class="video-link" aria-label="Lihat Video Shape Search">
+          <a href="https://youtu.be/cuvhBD2hm2U" target="_blank" class="video-link" aria-label="Lihat Video Shape Search">
             <svg viewBox="0 0 24 24" fill="none"><path d="M8 5v14l11-7L8 5z" fill="currentColor"/></svg>
             Lihat Video Shape Search
           </a>
@@ -341,7 +341,7 @@
             </li>
             <li>Isi kolom sesuai kode barcode yang berjalan di mesin.</li>
           </ol>
-          <a href="https://www.youtube.com/watch?v=zzzzzz" target="_blank" class="video-link" aria-label="Lihat Video Barcode">
+          <a href="https://youtube.com/shorts/K4pmYQ4eW5s?feature=share" target="_blank" class="video-link" aria-label="Lihat Video Barcode">
             <svg viewBox="0 0 24 24" fill="none"><path d="M8 5v14l11-7L8 5z" fill="currentColor"/></svg>
             Lihat Video Barcode
           </a>
@@ -360,7 +360,7 @@
             <li>Buka <strong>Dictionary Setting</strong> → pilih <em>Dictionary Unit</em> (OCR User Dictionary) yang diinginkan.</li>
             <li>Masuk <strong>Dictionary Regist</strong> → klik <strong>Measure</strong> → <strong>Character Regist</strong> untuk mendaftarkan karakter ke OCR User Dictionary.</li>
           </ol>
-          <a href="https://www.youtube.com/watch?v=aaaaaa" target="_blank" class="video-link" aria-label="Lihat Video OCR">
+          <a href="https://youtu.be/9kALaCwo-V0" target="_blank" class="video-link" aria-label="Lihat Video OCR">
             <svg viewBox="0 0 24 24" fill="none"><path d="M8 5v14l11-7L8 5z" fill="currentColor"/></svg>
             Lihat Video OCR
           </a>
@@ -377,7 +377,7 @@
             <li><strong>Teaching</strong> → aktifkan <strong>Display of Decoded</strong>.</li>
             <li>Atur ukuran tampilan hasil decoding sesuai kebutuhan UI.</li>
           </ol>
-          <a href="https://www.youtube.com/watch?v=bbbbbb" target="_blank" class="video-link" aria-label="Lihat Video 2D Code">
+          <a href="https://youtube.com/shorts/5Qs4-R7Qa0E?feature=share" target="_blank" class="video-link" aria-label="Lihat Video 2D Code">
             <svg viewBox="0 0 24 24" fill="none"><path d="M8 5v14l11-7L8 5z" fill="currentColor"/></svg>
             Lihat Video 2D Code
           </a>
@@ -394,7 +394,7 @@
             <li>Hapus karakter yang tidak perlu: klik karakter → <strong>Delete</strong>.</li>
             <li>Pastikan tidak ada karakter yang terselip di slot yang salah.</li>
           </ol>
-          <a href="https://www.youtube.com/watch?v=cccccc" target="_blank" class="video-link" aria-label="Lihat Video OCR User Dictionary">
+          <a href="https://youtube.com/shorts/clt91PH-cx4?feature=share" target="_blank" class="video-link" aria-label="Lihat Video OCR User Dictionary">
             <svg viewBox="0 0 24 24" fill="none"><path d="M8 5v14l11-7L8 5z" fill="currentColor"/></svg>
             Lihat Video OCR User Dictionary
           </a>
@@ -412,7 +412,7 @@
             <li>Atur <strong>Judgement Range</strong> dan <strong>Display</strong> sesuai jumlah format pembacaan.</li>
             <li>Verifikasi grafik/tabel berjalan dan simpan konfigurasi.</li>
           </ol>
-          <a href="https://www.youtube.com/watch?v=dddddd" target="_blank" class="video-link" aria-label="Lihat Video Trend Monitor">
+          <a href="https://youtube.com/shorts/dqmi0bDaFjQ?feature=share" target="_blank" class="video-link" aria-label="Lihat Video Trend Monitor">
             <svg viewBox="0 0 24 24" fill="none"><path d="M8 5v14l11-7L8 5z" fill="currentColor"/></svg>
             Lihat Video Trend Monitor
           </a>
@@ -430,7 +430,7 @@
             <li>Sesuaikan level filter sesuai kondisi cahaya.</li>
             <li>Gunakan terutama saat kemasan mengilap/pantulan kuat.</li>
           </ol>
-          <a href="https://www.youtube.com/watch?v=eeeeee" target="_blank" class="video-link" aria-label="Lihat Video Background Suppression">
+          <a href="https://youtube.com/shorts/m8YstCB1RBk?feature=share" target="_blank" class="video-link" aria-label="Lihat Video Background Suppression">
             <svg viewBox="0 0 24 24" fill="none"><path d="M8 5v14l11-7L8 5z" fill="currentColor"/></svg>
             Lihat Video Background Suppression
           </a>
@@ -447,7 +447,7 @@
             <li>Klik <strong>Add</strong> untuk menambahkan filter.</li>
             <li>Pilih filter sesuai kebutuhan (Smoothing/Sharpening/Contrast & lainnya).</li>
           </ol>
-          <a href="https://www.youtube.com/watch?v=ffffff" target="_blank" class="video-link" aria-label="Lihat Video Advance Filter">
+          <a href="https://youtube.com/shorts/9-XgnDXND8Q?feature=share" target="_blank" class="video-link" aria-label="Lihat Video Advance Filter">
             <svg viewBox="0 0 24 24" fill="none"><path d="M8 5v14l11-7L8 5z" fill="currentColor"/></svg>
             Lihat Video Advance Filter
           </a>
@@ -464,7 +464,7 @@
             <li>Untuk penggunaan normal: tidak perlu set region tambahan.</li>
             <li>Untuk rotasi gambar: pada <strong>Method</strong> pilih <strong>Calculation</strong>, ubah <strong>Position 0</strong> ke nilai 0–90.</li>
           </ol>
-          <a href="https://www.youtube.com/watch?v=gggggg" target="_blank" class="video-link" aria-label="Lihat Video Position Compensation">
+          <a href="https://youtube.com/shorts/x_obgKm8fu8?feature=share" target="_blank" class="video-link" aria-label="Lihat Video Position Compensation">
             <svg viewBox="0 0 24 24" fill="none"><path d="M8 5v14l11-7L8 5z" fill="currentColor"/></svg>
             Lihat Video Position Compensation
           </a>
