--- a/index.html
+++ b/index.html
@@ -257,7 +257,7 @@
     <!-- Header -->
     <header class="header">
       <h1>User Manual Kamera Omron FHV7</h1>
-      <p class="subtitle">Panduan langkah demi langkah untuk operasi inspeksi visual pada lini produksi  disusun untuk standar industri kosmetik.</p>
+      <p class="subtitle">Panduan langkah demi langkah untuk operasi inspeksi visual pada lini produksi</p>
     </header>
 
     <div class="grid">
